# upm

./: CMakeLists.txt  README.md  defines.h  gcc_commandline.txt  get_system_name.c  get_system_name.h  main.c  types.h  upm  utilities.c  utilities.h
Commands/: help.c  help.h
Systems/: APT.c  APT.h  DNF.c  DNF.h  Portage.c  Portage.h
